[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
html-escape = "0.2"
indexmap = "2"
async-recursion = "1"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
